force-app/volunteers/objects/FieldValueGroup__mdt/FieldValueGroup__mdt.object-meta.xml
<CustomObject>
    <description>Maps values to respective categories, like determining which Status values count as Active or Completed.</description>
    <label>Field Value Group</label>
    <pluralLabel>Field Value Groups</pluralLabel>
</CustomObject>