force-app/volunteers/objects/FieldValueGroup__mdt/fields/GroupValues__c.field-meta.xml
<CustomField>
    <fullName>GroupValues__c</fullName>
    <inlineHelpText>Status field values that should be considered &quot;Active&quot; for reporting and automation. Separate values by comma.</inlineHelpText>
    <label>Group Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>