force-app/volunteers/objects/FieldValueGroup__mdt/fields/IncludeBlankValuesInThisGroup__c.field-meta.xml
<CustomField>
    <fullName>IncludeBlankValuesInThisGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Blank Values in this Group</label>
    <type>Checkbox</type>
</CustomField>