force-app/volunteers/objects/FieldValueGroup__mdt/fields/MappedObject__c.field-meta.xml
<CustomField>
    <fullName>MappedObject__c</fullName>
    <label>Mapped Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>AssigmentStatusMappings</relationshipLabel>
    <relationshipName>AssigmentStatusMappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>